--- a/src/ServiceManagement/Compute/Commands.ServiceManagement/Commands.ServiceManagement.csproj
+++ b/src/ServiceManagement/Compute/Commands.ServiceManagement/Commands.ServiceManagement.csproj
@@ -208,15 +208,20 @@
     <Compile Include="IaaS\Network\AddAzureNetworkInterfaceConfig.cs" />
     <Compile Include="IaaS\Network\GetAzureInternalLoadBalancer.cs" />
     <Compile Include="IaaS\Network\GetAzureNetworkInterfaceConfig.cs" />
-    <Compile Include="IaaS\Network\GetAzureNetworkSecurityGroupConfig.cs" />    <Compile Include="IaaS\Network\NewAzureInternalLoadBalancerConfig.cs" />
+    <Compile Include="IaaS\Network\GetAzureNetworkSecurityGroupConfig.cs" />
+    <Compile Include="IaaS\Network\NewAzureInternalLoadBalancerConfig.cs" />
     <Compile Include="IaaS\Network\RemoveAzureDns.cs" />
     <Compile Include="IaaS\Network\RemoveAzureInternalLoadBalancer.cs" />
     <Compile Include="IaaS\Network\AddAzureInternalLoadBalancer.cs" />
-    <Compile Include="IaaS\Network\RemoveAzureNetworkInterfaceConfig.cs" />    <Compile Include="IaaS\Network\RemoveAzureNetworkSecurityGroupConfig.cs" />    <Compile Include="IaaS\Network\RemoveAzurePublicIP.cs" />
+    <Compile Include="IaaS\Network\RemoveAzureNetworkInterfaceConfig.cs" />
+    <Compile Include="IaaS\Network\RemoveAzureNetworkSecurityGroupConfig.cs" />
+    <Compile Include="IaaS\Network\RemoveAzurePublicIP.cs" />
     <Compile Include="IaaS\Network\GetAzurePublicIP.cs" />
     <Compile Include="IaaS\Network\SetAzureDns.cs" />
     <Compile Include="IaaS\Network\SetAzureInternalLoadBalancer.cs" />
-    <Compile Include="IaaS\Network\SetAzureNetworkSecurityGroupConfig.cs" />    <Compile Include="IaaS\Network\SetAzureNetworkInterfaceConfig.cs" />    <Compile Include="IaaS\Network\SetAzurePublicIP.cs" />
+    <Compile Include="IaaS\Network\SetAzureNetworkSecurityGroupConfig.cs" />
+    <Compile Include="IaaS\Network\SetAzureNetworkInterfaceConfig.cs" />
+    <Compile Include="IaaS\Network\SetAzurePublicIP.cs" />
     <Compile Include="Model\DeploymentRebootEventContext.cs" />
     <Compile Include="Model\InternalLoadBalancerSetting.cs" />
     <Compile Include="Model\InternalLoadBalancerContext.cs" />
