--- a/src/ServiceManagement/Network/Commands.Network/Commands.Network.csproj
+++ b/src/ServiceManagement/Network/Commands.Network/Commands.Network.csproj
@@ -53,9 +53,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Microsoft.WindowsAzure.Management.2.1.0\lib\net40\Microsoft.WindowsAzure.Management.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Management.Network, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.WindowsAzure.Management.Network, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Microsoft.WindowsAzure.Management.Network.3.1.0\lib\net40\Microsoft.WindowsAzure.Management.Network.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.WindowsAzure.Management.Network.4.0.0\lib\net40\Microsoft.WindowsAzure.Management.Network.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Storage, Version=4.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -84,12 +84,24 @@
     <Compile Include="Gateway\Model\VirtualNetworkGatewayContext.cs" />
     <Compile Include="Gateway\NewAzureVNetGateway.cs" />
     <Compile Include="Gateway\RemoveAzureVNetGateway.cs" />
+    <Compile Include="Gateway\RemoveAzureVNetGatewayDefaultSite.cs" />
+    <Compile Include="Gateway\ResizeAzureVnetGateway.cs" />
     <Compile Include="Gateway\SetAzureVNetGateway.cs" />
+    <Compile Include="Gateway\SetAzureVnetGatewayDefaultSite.cs" />
     <Compile Include="Gateway\SetAzureVnetGatewayKey.cs" />
     <Compile Include="Gateway\StartAzureVNetGatewayDiagnostics.cs" />
     <Compile Include="Gateway\StopAzureVNetGatewayDiagnostics.cs" />
     <Compile Include="NetworkClient.cs" />
     <Compile Include="NetworkCmdletBase.cs" />
+    <Compile Include="Routes\GetAzureRouteTable.cs" />
+    <Compile Include="Routes\GetAzureSubnetRouteTable.cs" />
+    <Compile Include="Routes\Model\SubnetRouteTableContext.cs" />
+    <Compile Include="Routes\NewAzureRouteTable.cs" />
+    <Compile Include="Routes\RemoveAzureRoute.cs" />
+    <Compile Include="Routes\RemoveAzureRouteTable.cs" />
+    <Compile Include="Routes\RemoveAzureSubnetRouteTable.cs" />
+    <Compile Include="Routes\SetAzureRoute.cs" />
+    <Compile Include="Routes\SetAzureSubnetRouteTable.cs" />
     <None Include="MSSharedLibKey.snk" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
